# mivis-public

./: .clineignore  .clinerules  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  prettier.config.js  turbo.json
apps/assistant/: index-assistant-temp.md  package.json  vite.config.js
apps/assistant/src/: app.d.ts
apps/assistant/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/assistant/src-tauri/capabilities/: default.json
apps/assistant/src-tauri/src/: lib.rs  main.rs  workflow_logger.rs
apps/assistant/src-tauri/src/chathandle/: mod.rs
apps/assistant/src/lib/components/: ChatBox.svelte
apps/assistant/src/routes/: +page.svelte
docs/adr/: index-apps.md
docs/plans/: configure-turbo-pipelines.md  enhance-ui-ux.md  integrate-llm-chatbox.md  integrate-stt-into-tauri.md  integrate-stt-tts-chatbox.md  integrate-tts-into-tauri.md  logging-plan.md  sprint-plan.md
memory-bank/: activeContext.md  projectbrief.md
