[package]
name = "assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "multipart", "rustls-tls"], default-features = false }
tauri-plugin-fs = "2.2.1"
tauri-plugin-shell = "2.2.1" # Remove features, assume Sidecar is available by default
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tauri-utils = "2.4.0"
chrono = { version = "0.4", features = ["serde"] } # Added chrono dependency
uuid = { version = "1.8", features = ["v4"] } # Added for unique workflow IDs
dotenv = "0.15"
log = "0.4"
base64 = "0.22.1"
